fix font-size and align text responsively

--- a/style.css
+++ b/style.css
@@ -11,24 +11,37 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 40px;
+  line-height: 36px;
   text-align: left;
   padding: 0px 20px;
 }
 
-.main-title {
+.main-title-h1 {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
   line-height: 30px;
   text-align: center;
   letter-spacing: -0.4px;
   margin-bottom: 35px;
+  position: absolute;
+  bottom: 150px;
+}
+
+.main-title-h2 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: -0.4px;
+  margin-bottom: 35px;
+  position: absolute;
+  bottom: 50px;
 }
 
 .section {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .flexible {
@@ -184,6 +197,74 @@ embed {
   margin-top: 16px;
 }
 
+ /* Hide the default video controls */
+ video::-webkit-media-controls {
+  display: none;
+}
+video::-webkit-media-controls-enclosure {
+  display: none !important;
+}
+video::-webkit-media-controls-overlay-play-button {
+  display: none !important;
+}
+video::-webkit-media-controls-play-button {
+  display: none !important;
+}
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
+}
+
+.home-section-container {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+video {
+  width: 100%;
+  height: calc(100vh - 60px); /* Subtract the navbar's height */
+  object-fit: cover;
+}
+
+.text-overlay-h1 {
+  position: absolute;
+  top: 65%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 36px;
+  opacity: 0;
+  animation: text-animation 3s linear forwards;
+  width: 100%
+}
+
+.text-overlay-h2 {
+  position: absolute;
+  top: 73%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 24px;
+  opacity: 0;
+  animation: text-animation 3s linear forwards;
+  width: 100%
+}
+
+@keyframes text-animation {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+
+#mobile-section-target {
+  margin-top: 30px;
+}
+
 
 @media (max-width: 1200px) {
   .nav ul {
@@ -192,5 +273,27 @@ embed {
 
   .nav img {
     height: 40px;
+  }
+
+  .text-overlay-h1 {
+    font-size: 26px;
+  }
+
+  .text-overlay-h2 {
+    font-size: 20px;
+  }
+
+  .text {
+    font-size: 16px;
+    line-height: 32px;
+  }
+
+  .separator {
+    height: 4px;
+  }
+
+  .section-title {
+    font-size: 22px;
+    line-height: 26px;
   }
 }
